--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 
 
   </main>
-  <footer>
+<!--   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="#">Tonmoy Sardar</a>.
     </div>
-  </footer>
+  </footer> -->
   <script src="script.js"></script>
 </body>
 
